# zpp_bits_fork_string_view

./: .gitignore  CMakeLists.txt  zpp_bits.h
test/: CMakeLists.txt  gtest.cmake
test/src/: test_optional_ptr.cpp  test_zero_copy_byte_types.cpp
